Fix some overflow issues

--- a/src/subtitulamos/resources/assets/css/control_panel.css
+++ b/src/subtitulamos/resources/assets/css/control_panel.css
@@ -8,7 +8,8 @@
   --control-panel-padding-y: 25px;
   background-color: var(--color-blue-a);
   color: var(--color-offwhite);
-  height: calc(100vh - var(--control-panel-padding-y) * 2);
+  height: calc(100% - var(--control-panel-padding-y) * 2);
+  max-height: calc(100vh - var(--control-panel-padding-y) * 2);
   padding: var(--control-panel-padding-y) var(--control-panel-padding-x);
   position: fixed;
   top: 0px;
@@ -105,9 +106,10 @@
 }
 
 #control-panel #control-panel-search input {
-  flex-shrink: 0;
+  flex: 1;
   background: transparent;
   color: var(--color-offwhite);
+  padding: 0;
 }
 
 #control-panel #control-panel-search button {
@@ -117,4 +119,22 @@
 
 #control-panel #control-panel-search > input::placeholder {
   color: var(--color-blue-d);
+}
+
+@media all and (max-width: 500px) {
+  #control-panel #control-panel-logo-wrap {
+    justify-content: center;
+  }
+
+  #control-panel #control-panel-search {
+    padding: 0px 6px;
+  }
+
+  #control-panel.open {
+    width: calc(100% - var(--control-panel-padding-x) * 2);
+  }
+
+  #page-container.control-panel-is-open {
+    display: none;
+  }
 }
